// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders 1`] = `
<Marker
  coordinate={
    Object {
      "latitude": 59.3419634,
      "longitude": 18.051719899999966,
    }
  }
  onPress={[Function]}
>
  <Image
    source="GreenMug.png"
    style={
      Object {
        "height": 32,
        "width": 32,
      }
    }
  />
  <Callout
    tooltip={true}
  />
</Marker>
`;

exports[`renders with red icon 1`] = `
<Marker
  coordinate={
    Object {
      "latitude": 59.3404626,
      "longitude": 18.05888660000005,
    }
  }
  onPress={[Function]}
>
  <Image
    source="RedMug.png"
    style={
      Object {
        "height": 32,
        "width": 32,
      }
    }
  />
  <Callout
    tooltip={true}
  />
</Marker>
`;

exports[`renders with yellow icon 1`] = `
<Marker
  coordinate={
    Object {
      "latitude": 59.3404626,
      "longitude": 18.05888660000005,
    }
  }
  onPress={[Function]}
>
  <Image
    source="YellowMug.png"
    style={
      Object {
        "height": 32,
        "width": 32,
      }
    }
  />
  <Callout
    tooltip={true}
  />
</Marker>
`;
